syntax = "proto3";

option java_package = "org.sorapointa.proto";


message WorldPlayerReviveRsp {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 227;
	}

	int32 retcode = 1;
}
