syntax = "proto3";

package proto;

option java_package = "org.sorapointa.proto.bin";

import "server_side/bin.server.proto";
import "server_side/define.proto";

message SavePlayerDataReq {
  PlayerData player_data = 1;
  uint32 save_stat_id = 2;
}

message SavePlayerDataRsp {
  int32 retcode = 1;
  uint32 data_version = 2;
  uint32 save_stat_id = 3;
}

message PlayerOnlineStatusInfo {
  enum StatusType {
    ONLINE = 0;
    OFFLINE = 1;
  }

  uint32 uid = 1;
  uint32 platform_type = 2;
  StatusType online_status = 3;
  bool is_sub_account = 4;
  string country_code = 5;
}

message PlayerOnlineStatusNotify {
  repeated PlayerOnlineStatusInfo player_info_list = 1;
}

message ServiceDisconnectNotify {
  ServiceType type = 1;
  uint32 ip = 2;
}

message PlayerDisconnectNotify {
  uint32 data = 1;
}

message DisconnectClientNotify {
  uint32 data = 1;
}

message SysCreateGroupReq {
}

message SaveBlockDataReq {
  map<uint32, BlockInfo> block_info_map = 1;
}

message SaveBlockDataRsp {
  int32 retcode = 1;
  map<uint32, uint32> block_succ_save_map = 2;
}

message SavePlayerExtraBinDataNotify {
  uint32 uid = 1;
  bytes player_extra_bin_data = 2;
}

message SysSavePlayerNotify {
}

message PlayerLoginBlockInfoNotify {
  uint64 login_rand = 1;
  map<uint32, BlockInfo> block_info_map = 2;
}
